k3s/apprise/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: apprise
  name: apprise

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apprise
  namespace: apprise
  labels:
    name: apprise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apprise
  template:
    metadata:
      labels:
        app: apprise
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: apprise
          image: caronc/apprise:latest
          ports:
            - name: http
              containerPort: 8000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
          volumeMounts:
            - mountPath: /config
              name: apprise-data
            - mountPath: /plugin
              name: apprise-data
            - mountPath: /attach
              name: apprise-data
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: apprise-data
          persistentVolumeClaim:
            claimName: apprise-data-nfs
        - name: tmp
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: apprise
  namespace: apprise
  labels:
    name: apprise
spec:
  selector:
    app: apprise
  ports:
    - name: http
      port: 80
      targetPort: http
